Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-7935

/catalog_object end point broken in LocalCatalog mode

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • Impala 3.1.0
    • None
    • Catalog
    • ghx-label-4

    Description

      Start Impala coordinator in LocalCatalog mode (v2)

      start-impala-cluster.py -s 1 --impalad_args="--use_local_catalog=true" --catalogd_args="--catalog_topic_mode=minimal"
      

      Check the following URL.

      http://<coordinator-host>:25000/catalog_object?object_type=TABLE&object_name=functional_text_lzo.alltypesaggmultifiles

      It says,

      Error: UnsupportedOperationException: LocalCatalog.getTCatalogObject
      

      Attachments

        Activity

          People

            anuragmantri Anurag Mantripragada
            bharathv Bharath Vissapragada
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: