IMPALA-7935: Disable /catalog_object in local catalog mode.

getTCatalogObject() is not supported in local catalog mode
since metadata is partially fetched on demand. Removed hyperlinks
to the /catalog_object endpoints when local_catalog_mode is enabled.

Testing:
1. Added a positive test in test_local_catalog to verify /catalog_mode
endpoint is disabled.
2. Added a negative test to test_web_pages.py to check /catalog_object
is working when local_catalog mode is not set.

Change-Id: Ia04797b32964c2edaa2e860dcf510d6f9cccd81c